<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorAccent">
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_a"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:visibility="invisible"
        android:id="@+id/tv_head_text"
        android:textColor="@color/white_color"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:text="@string/athlete_minder"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:gravity="center"/>
    <TextView
        android:visibility="invisible"
        android:id="@+id/tv_sub_heading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_head_text"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:text="@string/mind_your_sport"
        android:layout_marginTop="10dp"
        android:textColor="@color/white_color"
        android:gravity="center"/>
    <com.matthewtamlin.sliding_intro_screen_library.indicators.DotIndicator
        android:id="@+id/indicator"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_profile"
        app:numberOfDots="4"
        app:unselectedDotColor="@color/button_bg_color"
        app:selectedDotColor="@color/white_color"
        app:selectedDotIndex="0"
        android:layout_margin="10dp"/>

    <Button
        android:visibility="invisible"
        android:id="@+id/btn_create_profile"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintBottom_toTopOf="@id/btn_skip"
        android:text="@string/create_my_profile"
        android:textSize="30sp"
        android:textColor="@color/black_color"
        android:background="@drawable/button_bg_gradient"/>
    <Button
        android:visibility="invisible"
        android:id="@+id/btn_skip"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
        android:text="@string/skip"
        android:textSize="30sp"
        android:textColor="@color/white_color"
        android:background="@color/background_color"
        />
    <LinearLayout
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/bottom_layout"
        android:orientation="vertical"
        android:background="#0a0301"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tv_term_cond"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white_color"
            android:textSize="10sp"
            android:gravity="center"
            android:text="@string/by_using_this_service_i_accept_athleteminder_s_term_of_service"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>