<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent">
    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:gravity="start"
            android:textColor="@color/white_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_of_action"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:textColor="@color/white_color"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_chevron_right_black_24dp"/>


    </LinearLayout>
    <com.matthewtamlin.sliding_intro_screen_library.indicators.DotIndicator
        android:background="@color/colorPrimaryDark"
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        app:numberOfDots="5"
        app:unselectedDotColor="@color/training_text_color"
        app:selectedDotColor="@color/white_color"
        app:selectedDotIndex="0"
        app:layout_constraintTop_toBottomOf="@id/header_layout"/>
    <TextView
        android:id="@+id/tv_bringing_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/indicator"
        android:layout_marginTop="40dp"
        android:text="@string/bringing_it"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textColor="@color/white_color"
        android:textAllCaps="true"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/tv_sub_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_bringing_it"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/did_you_think_about_what_you_wanted_to_do_and_how_to_do_it"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:textColor="@color/white_color"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/layout_wining"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:background="@color/training_text_color"
        app:layout_constraintBottom_toTopOf="@id/bottom_layout"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white_color"
            android:textAllCaps="true"
            android:text="@string/wining_it"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/bottom_layout"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|bottom"
            android:src="@drawable/ic_info_black_24dp"
            android:scaleType="center"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>